unpackaged/main/default/objects/clazar__Listing__c/clazar__Listing__c.object-meta.xml
<CustomObject>
    <label>Clazar Listing</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clazar Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>