unpackaged/main/default/objects/clazar__Listing__c/fields/clazar__cloud__c.field-meta.xml
<CustomField>
    <fullName>clazar__cloud__c</fullName>
    <label>Cloud</label>
    <length>50</length>
    <type>Text</type>
</CustomField>