unpackaged/main/default/objects/clazar__Listing__c/fields/clazar__eula_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__eula_type__c</fullName>
    <label>EULA Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>