unpackaged/main/default/objects/clazar__Listing__c/fields/clazar__long_description__c.field-meta.xml
<CustomField>
    <fullName>clazar__long_description__c</fullName>
    <label>Long Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>