unpackaged/main/default/objects/clazar__Listing__c/fields/clazar__short_description__c.field-meta.xml
<CustomField>
    <fullName>clazar__short_description__c</fullName>
    <label>Short Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>