unpackaged/main/default/objects/clazar__Listing__c/listViews/clazar__GCP_Marketplace_Listings.listView-meta.xml
<ListView>
    <fullName>clazar__GCP_Marketplace_Listings</fullName>
    <columns>NAME</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__cloud_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clazar__cloud__c</field>
        <operation>equals</operation>
        <value>gcp</value>
    </filters>
    <label>GCP Marketplace Listings</label>
</ListView>